<?xml version="1.0"?>
<package format="3">
  <name>ros2_subscriber</name>
  <version>0.0.0</version>
  <description>ROS2 C++ Subscriber Node that listens to /chatter and logs received messages.</description>

  <maintainer email="student@university.edu">Student</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <!-- Testing tools -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
